<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/del_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:textSize="12sp"
        android:text="@string/del_label"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center_vertical"
        android:text="@string/in_label"
    />
    <TextView
        android:id="@+id/in_keyword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="16sp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center_vertical"
        android:text="@string/out_label"
    />
    <TextView
        android:id="@+id/out_keyword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="16sp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
    />

</LinearLayout>
