<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demo.pet.petapp.MainActivity3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >

            <include layout="@layout/scroll_view_separator" />

            <!-- En/Disable -->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/overlay_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overlay_switch_label"
            />

            <include layout="@layout/scroll_view_separator" />

            <!-- Speak Sound Level Threshold -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speak_threshold_label"
                />
                <TextView
                    android:id="@+id/speak_threshold_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
            </LinearLayout>
            <SeekBar
                android:id="@+id/sound_level_threshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />

            <include layout="@layout/scroll_view_separator" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stt_engine_label"
                />
                <Spinner
                    android:id="@+id/stt_engine_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                />
            </LinearLayout>

            <include layout="@layout/scroll_view_separator" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tts_engine_label"
                    />
                    <Spinner
                        android:id="@+id/tts_engine_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    />
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tts_service_label"
                    />
                    <Spinner
                        android:id="@+id/tts_engine_option_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    />
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/scroll_view_separator" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conversation_engine_label"
                />
                <Spinner
                    android:id="@+id/conversation_engine_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                />
            </LinearLayout>

            <include layout="@layout/scroll_view_separator" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_model_label"
                />
                <Spinner
                    android:id="@+id/character_model_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                />

            </LinearLayout>

            <include layout="@layout/scroll_view_separator" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
